--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.main.web-application-type=none
-spring.application.ui.title=My first Spring boot JFX
+spring.application.ui.title=PVC
 #Configuration de la base de données
 spring.datasource.url=jdbc:mysql://localhost:3306/caisse?createDatabaseIfNotExist=true
 spring.datasource.username=root
